--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/node-fetch": "^2.5.7",
     "chart.js": "^2.9.3",
-    "instamancer": "^3.2.0",
+    "instatouch": "^2.1.9",
+    "node-fetch": "^2.6.0",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-chartjs-2": "^2.9.0",
